# cicd-lab

./: .gitignore  .gitlab-ci.yml  Pipfile  README.md  config.yaml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
inventory/: defaults.yaml  groups.yaml  hosts.yaml
netaut_cicd_task/: filter.py  main.py  nr_tasks.py
netaut_cicd_task/plugins/connections/: __init__.py  nc.py
templates/: bgp.j2  interface_access.j2  interface_backbone.j2  interface_disabled.j2  interface_svi.j2  interfaces.j2  native.j2  ospf.j2  vrf.j2
tests/: test_netaut_cicd_task.py
