[tool.poetry]
name = "netaut-cicd-task"
version = "0.1.0"
description = ""
authors = ["ubaumann <github@m.ubaumann.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
nornir = "^3.3.0"
typer = "^0.4.1"
nornir-utils = "^0.2.0"
nornir-jinja2 = "^0.2.0"
rich = "^12.4.1"
nornir-netconf = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7"
black = "^22.3.0"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netaut = 'netaut_cicd_task.main:app'